vlib/v/checker/tests/immutable_pointer_selector_field_err.vv
struct AnotherStruct {
mut:
	str string
}

@[params]
struct MyOptions {
	data &AnotherStruct
}

fn fn_test(args MyOptions) {
	mut x := args.data
	x.str = 'why is this possible?'
}

fn main() {
	fn_test(
		data: &AnotherStruct{
			str: 'test'
		}
	)
}
